# smolfaas

./: .editorconfig  .gitignore  Makefile  README.md  smolfaas.code-workspace  tinyfaas.code-workspace  workers.code-workspace
.github/workflows/: deploy-server.yml
cli/: Makefile  pyproject.toml  uv
cli/examples/: basic.js
cli/src/cli/: __init__.py  __main__.py  cli.py
client/: Makefile  README.md  bun.lockb  example.js  index.js  package.json  pyproject.toml
client/examples/: basic.js  deploy.js
client/src/client/: __init__.py  __main__.py  cli.py
server/: .clang-format  .clang-tidy  CMakeLists.txt  Dockerfile  Makefile  README.md  compose.yml  fly.toml  pyproject.toml
server/src/: lrucache.h  main.cpp
server/src/server/: __init__.py  __main__.py  _core.pyi  api.py  app.py  queries.sql  utils.py
server/tests/: test_server.py
