[project]
name = "client"
version = "0.1.0"
description = "Add your description here"
readme = "../README.md"
authors = [
    { name = "Justin Chapman", email = "commonmodestudio@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.3",
    "typer>=0.15.1",
]

[project.scripts]
client = "client:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "ruff>=0.9.2",
    "types-requests>=2.32.0.20241016",
]
